<resources>
    <string name="app_name">WeatherApp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="created_by">Created by</string>
    <string name="febian">Febian</string>
    <string name="loading_please_wait">Loading, please wait..</string>
    <string name="city_and_country">%1$s, %2$s</string>
    <string name="temp">%1$s"\u2103"</string>
    <string name="min_temp">Min Temp: %1$s"\u2103"</string>
    <string name="max_temp">Max Temp: %1$s"\u2103"</string>
    <string name="updated_at">Updated at: %1$s</string>
</resources>